# gpx-art-generator

./: .gitignore  LICENSE  README.md
cli/: .pre-commit-config.yaml  Makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
cli/cli/: test.gpx
cli/gpx_art/: config.py  exceptions.py  exporters.py  logging.py  main.py  models.py  visualizer.py
cli/route_to_art/: config.py  exceptions.py  exporters.py  logging.py  main.py  parsers.py  visualizer.py
cli/tests/: test_cli_config.py  test_commands.py  test_config.py  test_error_handling.py  test_exporters.py  test_init_config.py  test_main.py  test_models.py  test_parsers.py  test_visualizer.py
docs/: CLI-USAGE.md  EXAMPLES.md  SPECIFICATION.md  containerization-spec.md  gpx-art-spec.md  project-blueprint.md
docs/prompt-plan/: phase-1-prompts.md  phase-2-prompts.md  phase-3-prompts.md  phase-4-prompts.md  phase-5-prompts.md  phase-6-prompts.md  phase-7-prompts.md  phase-8-prompts-rename.md
src/components/ui/: Button.tsx
web/: docker-compose.yml
web/backend/: Dockerfile  handlers.py  main.py  models.py  requirements.txt
web/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: UploadForm.tsx
web/frontend/src/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Progress.tsx
